--- a/Experiments/evaluation/reports/EM_table.tex
+++ b/Experiments/evaluation/reports/EM_table.tex
@@ -1,26 +1,23 @@
-Experiment | Semantic | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 69.80 & 55.60 & 0.00 & 2.20 & 0.07 & 73.80 & 23.29 & 43.87 \\
-gpt-4.1-2025-04-14 & 3 & - & 54.40 & - & - & - & - & - & 54.40 \\
-gpt-4.1-2025-04-14 & 10 & 63.47 & 9.40 & 0.00 & 1.80 & 0.67 & 5.00 & 21.38 & 5.40 \\
-gpt-4.1-2025-04-14 & all(-1) & 59.93 & 2.60 & 0.00 & 1.00 & 0.33 & 0.40 & 20.09 & 1.33 \\
+gpt-4.1-2025-04-14 & 1 & 0.07 & 20.40 & 0.00 & 2.20 & 0.07 & 73.80 & 0.05 & 32.13 \\
+gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 1.80 & 0.67 & 5.00 & 0.34 & 3.40 \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 1.00 & 0.33 & 0.40 & 0.17 & 0.70 \\
 \hline
-llama_3.3_70b & 1 & 62.60 & 46.00 & 0.00 & 0.80 & 0.00 & 51.60 & 20.87 & 32.80 \\
-llama_3.3_70b & 3 & - & - & - & - & - & - & - & - \\
-llama_3.3_70b & 10 & 24.87 & 12.40 & 0.00 & 1.60 & 0.00 & 2.80 & 8.29 & 5.60 \\
-llama_3.3_70b & all(-1) & 11.73 & 6.80 & 0.00 & 1.00 & 0.00 & 0.20 & 3.91 & 2.67 \\
+llama_3.3_70b & 1 & 0.00 & 63.67 & 0.00 & 0.07 & 0.00 & 47.33 & 0.00 & 37.02 \\
+llama_3.3_70b & 10 & 0.00 & 18.07 & 0.00 & 0.00 & 0.00 & 3.80 & 0.00 & 7.29 \\
+llama_3.3_70b & all(-1) & 0.00 & 9.13 & 0.00 & 0.00 & 0.00 & 0.33 & 0.00 & 3.15 \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 33.58 \\
-gpt-4.1-2025-04-14 & 3 & 54.40 \\
-gpt-4.1-2025-04-14 & 10 & 13.39 \\
-gpt-4.1-2025-04-14 & all(-1) & 10.71 \\
-llama_3.3_70b & 1 & 26.83 \\
-llama_3.3_70b & 10 & 6.95 \\
-llama_3.3_70b & all(-1) & 3.29 \\
+gpt-4.1-2025-04-14 & 1 & 16.09 \\
+gpt-4.1-2025-04-14 & 10 & 1.87 \\
+gpt-4.1-2025-04-14 & all(-1) & 0.43 \\
+llama_3.3_70b & 1 & 18.51 \\
+llama_3.3_70b & 10 & 3.65 \\
+llama_3.3_70b & all(-1) & 1.58 \\
 \hline
