--- a/Experiments/evaluation/reports/tokens-prompt_table.tex
+++ b/Experiments/evaluation/reports/tokens-prompt_table.tex
@@ -1,15 +1,13 @@
-Experiment | Semantic | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
 gpt-4.1-2025-04-14 & 1 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & 3 & - & 0.00 & - & - & - & - & - & 0.00 \\
-gpt-4.1-2025-04-14 & 10 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & all(-1) & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
 \hline
-llama_3.3_70b & 1 & 524.00 & 352.00 & 553.00 & 369.00 & 554.00 & 336.00 & 543.67 & 352.33 \\
-llama_3.3_70b & 3 & - & - & - & - & - & - & - & - \\
-llama_3.3_70b & 10 & 3665.00 & 1688.00 & 3965.00 & 1844.00 & 3878.00 & 1575.00 & 3836.00 & 1702.33 \\
-llama_3.3_70b & all(-1) & 10656.00 & 3175.00 & 11546.00 & 3482.00 & 11267.00 & 2951.00 & 11156.33 & 3202.67 \\
+llama_3.3_70b & 1 & 654.00 & 393.00 & 737.00 & 387.00 & 736.00 & 372.00 & 709.00 & 384.00 \\
+llama_3.3_70b & 10 & 4986.00 & 1992.00 & 5812.00 & 1806.00 & 5159.00 & 1721.00 & 5319.00 & 1839.67 \\
+llama_3.3_70b & all(-1) & 14617.00 & 5551.00 & 17100.00 & 4961.00 & 14984.00 & 4719.00 & 15567.00 & 5077.00 \\
 \hline
 
 \bigskip
@@ -17,10 +15,9 @@ llama_3.3_70b & all(-1) & 10656.00 & 3175.00 & 11546.00 & 3482.00 & 11267.00 & 2
 \hline
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 0.00 \\
-gpt-4.1-2025-04-14 & 3 & 0.00 \\
 gpt-4.1-2025-04-14 & 10 & 0.00 \\
 gpt-4.1-2025-04-14 & all(-1) & 0.00 \\
-llama_3.3_70b & 1 & 448.00 \\
-llama_3.3_70b & 10 & 2769.17 \\
-llama_3.3_70b & all(-1) & 7179.50 \\
+llama_3.3_70b & 1 & 546.50 \\
+llama_3.3_70b & 10 & 3579.33 \\
+llama_3.3_70b & all(-1) & 10322.00 \\
 \hline
