--- a/Experiments/evaluation/reports/contains_table.tex
+++ b/Experiments/evaluation/reports/contains_table.tex
@@ -1,26 +1,23 @@
-Experiment | Semantic | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 77.87 & 68.20 & 0.00 & 68.00 & 0.13 & 92.40 & 26.00 & 76.20 \\
-gpt-4.1-2025-04-14 & 3 & - & 60.00 & - & - & - & - & - & 60.00 \\
-gpt-4.1-2025-04-14 & 10 & 64.60 & 57.20 & 0.00 & 19.60 & 1.73 & 11.40 & 22.11 & 29.40 \\
-gpt-4.1-2025-04-14 & all(-1) & 60.47 & 52.80 & 0.00 & 9.80 & 0.73 & 3.40 & 20.40 & 22.00 \\
+gpt-4.1-2025-04-14 & 1 & 7.67 & 93.53 & 0.00 & 68.00 & 0.13 & 92.40 & 2.60 & 84.64 \\
+gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 19.60 & 1.73 & 11.40 & 0.86 & 15.50 \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 9.80 & 0.73 & 3.40 & 0.36 & 6.60 \\
 \hline
-llama_3.3_70b & 1 & 63.80 & 55.60 & 0.00 & 68.40 & 28.00 & 94.60 & 30.60 & 72.87 \\
-llama_3.3_70b & 3 & - & - & - & - & - & - & - & - \\
-llama_3.3_70b & 10 & 28.87 & 19.60 & 0.00 & 6.80 & 4.20 & 20.80 & 11.02 & 15.73 \\
-llama_3.3_70b & all(-1) & 16.33 & 11.00 & 0.00 & 3.80 & 1.47 & 3.40 & 5.93 & 6.07 \\
+llama_3.3_70b & 1 & 31.33 & 68.73 & 0.00 & 14.87 & 13.93 & 96.67 & 15.09 & 60.09 \\
+llama_3.3_70b & 10 & 4.87 & 31.33 & 0.00 & 0.60 & 0.80 & 41.60 & 1.89 & 24.51 \\
+llama_3.3_70b & all(-1) & 3.87 & 16.00 & 0.00 & 0.00 & 0.87 & 2.20 & 1.58 & 6.07 \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 51.10 \\
-gpt-4.1-2025-04-14 & 3 & 60.00 \\
-gpt-4.1-2025-04-14 & 10 & 25.75 \\
-gpt-4.1-2025-04-14 & all(-1) & 21.20 \\
-llama_3.3_70b & 1 & 51.73 \\
-llama_3.3_70b & 10 & 13.38 \\
-llama_3.3_70b & all(-1) & 6.00 \\
+gpt-4.1-2025-04-14 & 1 & 43.62 \\
+gpt-4.1-2025-04-14 & 10 & 8.18 \\
+gpt-4.1-2025-04-14 & all(-1) & 3.48 \\
+llama_3.3_70b & 1 & 37.59 \\
+llama_3.3_70b & 10 & 13.20 \\
+llama_3.3_70b & all(-1) & 3.82 \\
 \hline
