--- a/Experiments/evaluation/reports/rouge-2-recall_table.tex
+++ b/Experiments/evaluation/reports/rouge-2-recall_table.tex
@@ -1,26 +1,23 @@
-Experiment | Semantic | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 77.87 & 0.20 & 32.94 & 76.22 & 94.14 & 0.20 & 68.32 & 25.54 \\
-gpt-4.1-2025-04-14 & 3 & - & 0.20 & - & - & - & - & - & 0.20 \\
-gpt-4.1-2025-04-14 & 10 & 64.83 & 0.20 & 6.66 & 21.93 & 6.01 & 0.00 & 25.83 & 7.38 \\
-gpt-4.1-2025-04-14 & all(-1) & 61.43 & 0.00 & 3.43 & 10.97 & 2.01 & 0.00 & 22.29 & 3.66 \\
+gpt-4.1-2025-04-14 & 1 & 88.40 & 0.93 & 32.94 & 76.22 & 94.14 & 0.20 & 71.83 & 25.78 \\
+gpt-4.1-2025-04-14 & 10 & - & - & 6.66 & 21.93 & 6.01 & 0.00 & 6.33 & 10.96 \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & 3.43 & 10.97 & 2.01 & 0.00 & 2.72 & 5.49 \\
 \hline
-llama_3.3_70b & 1 & 63.80 & 0.20 & 32.83 & 75.08 & 87.05 & 0.20 & 61.23 & 25.16 \\
-llama_3.3_70b & 3 & - & - & - & - & - & - & - & - \\
-llama_3.3_70b & 10 & 29.97 & 0.00 & 8.82 & 7.53 & 8.93 & 0.00 & 15.91 & 2.51 \\
-llama_3.3_70b & all(-1) & 18.47 & 0.00 & 2.62 & 4.03 & 3.42 & 0.00 & 8.17 & 1.34 \\
+llama_3.3_70b & 1 & 74.52 & 0.80 & 28.72 & 29.58 & 61.94 & 0.73 & 55.06 & 10.37 \\
+llama_3.3_70b & 10 & 18.24 & 0.47 & 7.68 & 1.83 & 3.60 & 0.13 & 9.84 & 0.81 \\
+llama_3.3_70b & all(-1) & 13.03 & 0.20 & 1.45 & 0.39 & 3.36 & 0.00 & 5.95 & 0.20 \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 46.93 \\
-gpt-4.1-2025-04-14 & 3 & 0.20 \\
-gpt-4.1-2025-04-14 & 10 & 16.61 \\
-gpt-4.1-2025-04-14 & all(-1) & 12.97 \\
-llama_3.3_70b & 1 & 43.19 \\
-llama_3.3_70b & 10 & 9.21 \\
-llama_3.3_70b & all(-1) & 4.76 \\
+gpt-4.1-2025-04-14 & 1 & 48.80 \\
+gpt-4.1-2025-04-14 & 10 & 8.65 \\
+gpt-4.1-2025-04-14 & all(-1) & 4.10 \\
+llama_3.3_70b & 1 & 32.71 \\
+llama_3.3_70b & 10 & 5.33 \\
+llama_3.3_70b & all(-1) & 3.07 \\
 \hline
