--- a/Experiments/evaluation/reports/rouge-l-recall_table.tex
+++ b/Experiments/evaluation/reports/rouge-l-recall_table.tex
@@ -1,26 +1,23 @@
-Experiment | Semantic | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 77.87 & 68.20 & 90.97 & 99.27 & 96.43 & 92.40 & 88.42 & 86.62 \\
-gpt-4.1-2025-04-14 & 3 & - & 60.00 & - & - & - & - & - & 60.00 \\
-gpt-4.1-2025-04-14 & 10 & 67.13 & 57.20 & 18.88 & 34.50 & 14.43 & 11.40 & 33.48 & 34.37 \\
-gpt-4.1-2025-04-14 & all(-1) & 67.64 & 52.80 & 9.06 & 20.28 & 13.33 & 3.40 & 30.01 & 25.49 \\
+gpt-4.1-2025-04-14 & 1 & 92.29 & 93.53 & 90.97 & 99.27 & 96.43 & 92.40 & 93.23 & 95.07 \\
+gpt-4.1-2025-04-14 & 10 & - & - & 18.88 & 34.50 & 14.43 & 11.40 & 16.66 & 22.95 \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & 9.06 & 20.28 & 13.33 & 3.40 & 11.20 & 11.84 \\
 \hline
-llama_3.3_70b & 1 & 63.80 & 55.60 & 96.63 & 95.37 & 89.58 & 94.60 & 83.34 & 81.86 \\
-llama_3.3_70b & 3 & - & - & - & - & - & - & - & - \\
-llama_3.3_70b & 10 & 35.09 & 19.60 & 25.46 & 12.73 & 21.00 & 20.80 & 27.18 & 17.71 \\
-llama_3.3_70b & all(-1) & 27.93 & 11.00 & 7.35 & 6.63 & 21.14 & 3.40 & 18.81 & 7.01 \\
+llama_3.3_70b & 1 & 78.59 & 68.73 & 88.34 & 88.90 & 66.19 & 96.67 & 77.71 & 84.77 \\
+llama_3.3_70b & 10 & 23.29 & 31.33 & 23.27 & 10.23 & 8.79 & 41.60 & 18.45 & 27.72 \\
+llama_3.3_70b & all(-1) & 18.69 & 16.00 & 4.30 & 4.47 & 17.91 & 2.20 & 13.63 & 7.56 \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 87.52 \\
-gpt-4.1-2025-04-14 & 3 & 60.00 \\
-gpt-4.1-2025-04-14 & 10 & 33.92 \\
-gpt-4.1-2025-04-14 & all(-1) & 27.75 \\
-llama_3.3_70b & 1 & 82.60 \\
-llama_3.3_70b & 10 & 22.45 \\
-llama_3.3_70b & all(-1) & 12.91 \\
+gpt-4.1-2025-04-14 & 1 & 94.15 \\
+gpt-4.1-2025-04-14 & 10 & 19.80 \\
+gpt-4.1-2025-04-14 & all(-1) & 11.52 \\
+llama_3.3_70b & 1 & 81.24 \\
+llama_3.3_70b & 10 & 23.08 \\
+llama_3.3_70b & all(-1) & 10.60 \\
 \hline
