--- a/Experiments/evaluation/reports/sentences_table.tex
+++ b/Experiments/evaluation/reports/sentences_table.tex
@@ -1,15 +1,13 @@
-Experiment | Semantic | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 1.00 & 1.00 & 1.00 & 1.01 & 1.01 & 1.01 & 1.00 & 1.01 \\
-gpt-4.1-2025-04-14 & 3 & - & 1.00 & - & - & - & - & - & 1.00 \\
-gpt-4.1-2025-04-14 & 10 & 1.00 & 1.00 & 1.02 & 1.12 & 1.21 & 1.00 & 1.08 & 1.04 \\
-gpt-4.1-2025-04-14 & all(-1) & 1.00 & 1.02 & 1.05 & 1.06 & 1.30 & 1.00 & 1.12 & 1.03 \\
+gpt-4.1-2025-04-14 & 1 & 1.01 & 1.01 & 1.00 & 1.01 & 1.01 & 1.01 & 1.01 & 1.01 \\
+gpt-4.1-2025-04-14 & 10 & - & - & 1.02 & 1.12 & 1.21 & 1.00 & 1.12 & 1.06 \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & 1.05 & 1.06 & 1.30 & 1.00 & 1.17 & 1.03 \\
 \hline
-llama_3.3_70b & 1 & 1.47 & 1.33 & 3.22 & 3.36 & 3.40 & 1.80 & 2.70 & 2.16 \\
-llama_3.3_70b & 3 & - & - & - & - & - & - & - & - \\
-llama_3.3_70b & 10 & 1.39 & 1.36 & 5.89 & 2.12 & 3.32 & 2.61 & 3.53 & 2.03 \\
-llama_3.3_70b & all(-1) & 1.34 & 1.33 & 3.57 & 1.20 & 3.59 & 1.09 & 2.83 & 1.21 \\
+llama_3.3_70b & 1 & 1.77 & 1.57 & 4.58 & 3.12 & 4.08 & 1.96 & 3.47 & 2.22 \\
+llama_3.3_70b & 10 & 1.17 & 2.15 & 6.11 & 1.90 & 1.58 & 2.78 & 2.95 & 2.28 \\
+llama_3.3_70b & all(-1) & 1.16 & 2.24 & 2.25 & 1.23 & 2.33 & 1.04 & 1.91 & 1.50 \\
 \hline
 
 \bigskip
@@ -17,10 +15,9 @@ llama_3.3_70b & all(-1) & 1.34 & 1.33 & 3.57 & 1.20 & 3.59 & 1.09 & 2.83 & 1.21 
 \hline
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 1.01 \\
-gpt-4.1-2025-04-14 & 3 & 1.00 \\
-gpt-4.1-2025-04-14 & 10 & 1.06 \\
-gpt-4.1-2025-04-14 & all(-1) & 1.07 \\
-llama_3.3_70b & 1 & 2.43 \\
-llama_3.3_70b & 10 & 2.78 \\
-llama_3.3_70b & all(-1) & 2.02 \\
+gpt-4.1-2025-04-14 & 10 & 1.09 \\
+gpt-4.1-2025-04-14 & all(-1) & 1.10 \\
+llama_3.3_70b & 1 & 2.85 \\
+llama_3.3_70b & 10 & 2.62 \\
+llama_3.3_70b & all(-1) & 1.71 \\
 \hline
