--- a/Experiments/evaluation/reports/tokens-completion_table.tex
+++ b/Experiments/evaluation/reports/tokens-completion_table.tex
@@ -1,15 +1,13 @@
-Experiment | Semantic | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
 gpt-4.1-2025-04-14 & 1 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & 3 & - & 0.00 & - & - & - & - & - & 0.00 \\
-gpt-4.1-2025-04-14 & 10 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & all(-1) & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
 \hline
-llama_3.3_70b & 1 & 14.00 & 15.00 & 68.00 & 90.00 & 99.00 & 37.00 & 60.33 & 47.33 \\
-llama_3.3_70b & 3 & - & - & - & - & - & - & - & - \\
-llama_3.3_70b & 10 & 20.00 & 21.00 & 137.00 & 46.00 & 106.00 & 58.00 & 87.67 & 41.67 \\
-llama_3.3_70b & all(-1) & 21.00 & 22.00 & 93.00 & 20.00 & 123.00 & 6.00 & 79.00 & 16.00 \\
+llama_3.3_70b & 1 & 35.00 & 17.00 & 107.00 & 79.00 & 98.00 & 42.00 & 80.00 & 46.00 \\
+llama_3.3_70b & 10 & 22.00 & 56.00 & 131.00 & 40.00 & 26.00 & 68.00 & 59.67 & 54.67 \\
+llama_3.3_70b & all(-1) & 21.00 & 48.00 & 51.00 & 22.00 & 72.00 & 4.00 & 48.00 & 24.67 \\
 \hline
 
 \bigskip
@@ -17,10 +15,9 @@ llama_3.3_70b & all(-1) & 21.00 & 22.00 & 93.00 & 20.00 & 123.00 & 6.00 & 79.00 
 \hline
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 0.00 \\
-gpt-4.1-2025-04-14 & 3 & 0.00 \\
 gpt-4.1-2025-04-14 & 10 & 0.00 \\
 gpt-4.1-2025-04-14 & all(-1) & 0.00 \\
-llama_3.3_70b & 1 & 53.83 \\
-llama_3.3_70b & 10 & 64.67 \\
-llama_3.3_70b & all(-1) & 47.50 \\
+llama_3.3_70b & 1 & 63.00 \\
+llama_3.3_70b & 10 & 57.17 \\
+llama_3.3_70b & all(-1) & 36.33 \\
 \hline
