--- a/Experiments/evaluation/reports/tokens-total_table.tex
+++ b/Experiments/evaluation/reports/tokens-total_table.tex
@@ -1,15 +1,13 @@
-Experiment | Semantic | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
 gpt-4.1-2025-04-14 & 1 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & 3 & - & 0.00 & - & - & - & - & - & 0.00 \\
-gpt-4.1-2025-04-14 & 10 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & all(-1) & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
 \hline
-llama_3.3_70b & 1 & 538.00 & 367.00 & 621.00 & 459.00 & 653.00 & 373.00 & 604.00 & 399.67 \\
-llama_3.3_70b & 3 & - & - & - & - & - & - & - & - \\
-llama_3.3_70b & 10 & 3685.00 & 1709.00 & 4102.00 & 1890.00 & 3984.00 & 1633.00 & 3923.67 & 1744.00 \\
-llama_3.3_70b & all(-1) & 10677.00 & 3197.00 & 11639.00 & 3502.00 & 11391.00 & 2957.00 & 11235.67 & 3218.67 \\
+llama_3.3_70b & 1 & 689.00 & 410.00 & 844.00 & 466.00 & 834.00 & 414.00 & 789.00 & 430.00 \\
+llama_3.3_70b & 10 & 5009.00 & 2049.00 & 5943.00 & 1846.00 & 5184.00 & 1789.00 & 5378.67 & 1894.67 \\
+llama_3.3_70b & all(-1) & 14639.00 & 5599.00 & 17150.00 & 4982.00 & 15056.00 & 4723.00 & 15615.00 & 5101.33 \\
 \hline
 
 \bigskip
@@ -17,10 +15,9 @@ llama_3.3_70b & all(-1) & 10677.00 & 3197.00 & 11639.00 & 3502.00 & 11391.00 & 2
 \hline
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 0.00 \\
-gpt-4.1-2025-04-14 & 3 & 0.00 \\
 gpt-4.1-2025-04-14 & 10 & 0.00 \\
 gpt-4.1-2025-04-14 & all(-1) & 0.00 \\
-llama_3.3_70b & 1 & 501.83 \\
-llama_3.3_70b & 10 & 2833.83 \\
-llama_3.3_70b & all(-1) & 7227.17 \\
+llama_3.3_70b & 1 & 609.50 \\
+llama_3.3_70b & 10 & 3636.67 \\
+llama_3.3_70b & all(-1) & 10358.17 \\
 \hline
