--- a/RAG_Style/reports/EM_table.tex
+++ b/RAG_Style/reports/EM_table.tex
@@ -1,23 +1,13 @@
-Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | Arithmetic | World.K | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 0.07 & 20.40 & 0.00 & 2.20 & 0.07 & 73.80 & 0.05 & 32.13 \\
-gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 1.80 & 0.67 & 5.00 & 0.34 & 3.40 \\
-gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 1.00 & 0.33 & 0.40 & 0.17 & 0.70 \\
+gpt-4.1-2025-04-14 & 1 & - & - & - & - & - & - & - & - \\
 \hline
-llama_3.3_70b & 1 & 0.00 & 63.67 & 0.00 & 0.07 & 0.00 & 47.33 & 0.00 & 37.02 \\
-llama_3.3_70b & 10 & 0.00 & 18.07 & 0.00 & 0.00 & 0.00 & 3.80 & 0.00 & 7.29 \\
-llama_3.3_70b & all(-1) & 0.00 & 9.13 & 0.00 & 0.00 & 0.00 & 0.33 & 0.00 & 3.15 \\
+llama_3.3_70b & 1 & - & - & - & - & - & - & - & - \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 16.09 \\
-gpt-4.1-2025-04-14 & 10 & 1.87 \\
-gpt-4.1-2025-04-14 & all(-1) & 0.43 \\
-llama_3.3_70b & 1 & 18.51 \\
-llama_3.3_70b & 10 & 3.65 \\
-llama_3.3_70b & all(-1) & 1.58 \\
 \hline
