--- a/RAG_Style/reports/rouge-1-recall_table.tex
+++ b/RAG_Style/reports/rouge-1-recall_table.tex
@@ -1,24 +1,13 @@
-Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | Arithmetic | World.K | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 92.96 & 93.53 & 99.62 & 99.27 & 96.60 & 92.40 & 96.39 & 95.07 \\
-gpt-4.1-2025-04-14 & 10 & - & - & 19.51 & 34.50 & 14.59 & 11.40 & 17.05 & 22.95 \\
-gpt-4.1-2025-04-14 & all(-1) & - & - & 9.08 & 20.28 & 13.41 & 3.40 & 11.25 & 11.84 \\
+gpt-4.1-2025-04-14 & 1 & - & - & - & - & - & - & - & - \\
 \hline
-llama_3.3_70b & 1 & 78.84 & 68.73 & 90.39 & 89.86 & 67.03 & 96.67 & 78.75 & 85.09 \\
-llama_3.3_70b & 10 & 23.40 & 31.33 & 23.59 & 10.37 & 8.85 & 41.60 & 18.61 & 27.77 \\
-llama_3.3_70b & all(-1) & 18.85 & 16.00 & 4.37 & 4.47 & 18.37 & 2.20 & 13.86 & 7.56 \\
+llama_3.3_70b & 1 & - & - & - & - & - & - & - & - \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 95.73 \\
-gpt-4.1-2025-04-14 & 10 & 20.00 \\
-gpt-4.1-2025-04-14 & all(-1) & 11.54 \\
-llama_3.3_70b & 1 & 81.92 \\
-llama_3.3_70b & 10 & 23.19 \\
-llama_3.3_70b & all(-1) & 10.71 \\
 \hline
-
