--- a/RAG_Style/reports/tokens-completion_table.tex
+++ b/RAG_Style/reports/tokens-completion_table.tex
@@ -1,23 +1,13 @@
-Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | Arithmetic | World.K | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+gpt-4.1-2025-04-14 & 1 & - & - & - & - & - & - & - & - \\
 \hline
-llama_3.3_70b & 1 & 35.00 & 17.00 & 107.00 & 79.00 & 98.00 & 42.00 & 80.00 & 46.00 \\
-llama_3.3_70b & 10 & 22.00 & 56.00 & 131.00 & 40.00 & 26.00 & 68.00 & 59.67 & 54.67 \\
-llama_3.3_70b & all(-1) & 21.00 & 48.00 & 51.00 & 22.00 & 72.00 & 4.00 & 48.00 & 24.67 \\
+llama_3.3_70b & 1 & - & - & - & - & - & - & - & - \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 0.00 \\
-gpt-4.1-2025-04-14 & 10 & 0.00 \\
-gpt-4.1-2025-04-14 & all(-1) & 0.00 \\
-llama_3.3_70b & 1 & 63.00 \\
-llama_3.3_70b & 10 & 57.17 \\
-llama_3.3_70b & all(-1) & 36.33 \\
 \hline
