--- a/RAG_Style/reports/tokens-total_table.tex
+++ b/RAG_Style/reports/tokens-total_table.tex
@@ -1,23 +1,13 @@
-Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | Arithmetic | World.K | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+gpt-4.1-2025-04-14 & 1 & - & - & - & - & - & - & - & - \\
 \hline
-llama_3.3_70b & 1 & 689.00 & 410.00 & 844.00 & 466.00 & 834.00 & 414.00 & 789.00 & 430.00 \\
-llama_3.3_70b & 10 & 5009.00 & 2049.00 & 5943.00 & 1846.00 & 5184.00 & 1789.00 & 5378.67 & 1894.67 \\
-llama_3.3_70b & all(-1) & 14639.00 & 5599.00 & 17150.00 & 4982.00 & 15056.00 & 4723.00 & 15615.00 & 5101.33 \\
+llama_3.3_70b & 1 & - & - & - & - & - & - & - & - \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 0.00 \\
-gpt-4.1-2025-04-14 & 10 & 0.00 \\
-gpt-4.1-2025-04-14 & all(-1) & 0.00 \\
-llama_3.3_70b & 1 & 609.50 \\
-llama_3.3_70b & 10 & 3636.67 \\
-llama_3.3_70b & all(-1) & 10358.17 \\
 \hline
