--- a/RAG_Style/reports/contains_table.tex
+++ b/RAG_Style/reports/contains_table.tex
@@ -1,23 +1,13 @@
-Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | Arithmetic | World.K | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 7.67 & 93.53 & 0.00 & 68.00 & 0.13 & 92.40 & 2.60 & 84.64 \\
-gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 19.60 & 1.73 & 11.40 & 0.86 & 15.50 \\
-gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 9.80 & 0.73 & 3.40 & 0.36 & 6.60 \\
+gpt-4.1-2025-04-14 & 1 & - & - & - & - & - & - & - & - \\
 \hline
-llama_3.3_70b & 1 & 31.33 & 68.73 & 0.00 & 14.87 & 13.93 & 96.67 & 15.09 & 60.09 \\
-llama_3.3_70b & 10 & 4.87 & 31.33 & 0.00 & 0.60 & 0.80 & 41.60 & 1.89 & 24.51 \\
-llama_3.3_70b & all(-1) & 3.87 & 16.00 & 0.00 & 0.00 & 0.87 & 2.20 & 1.58 & 6.07 \\
+llama_3.3_70b & 1 & - & - & - & - & - & - & - & - \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 43.62 \\
-gpt-4.1-2025-04-14 & 10 & 8.18 \\
-gpt-4.1-2025-04-14 & all(-1) & 3.48 \\
-llama_3.3_70b & 1 & 37.59 \\
-llama_3.3_70b & 10 & 13.20 \\
-llama_3.3_70b & all(-1) & 3.82 \\
 \hline
