--- a/RAG_Style/reports/rouge-2-recall_table.tex
+++ b/RAG_Style/reports/rouge-2-recall_table.tex
@@ -1,23 +1,13 @@
-Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | Arithmetic | World.K | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 88.40 & 0.93 & 32.94 & 76.22 & 94.14 & 0.20 & 71.83 & 25.78 \\
-gpt-4.1-2025-04-14 & 10 & - & - & 6.66 & 21.93 & 6.01 & 0.00 & 6.33 & 10.96 \\
-gpt-4.1-2025-04-14 & all(-1) & - & - & 3.43 & 10.97 & 2.01 & 0.00 & 2.72 & 5.49 \\
+gpt-4.1-2025-04-14 & 1 & - & - & - & - & - & - & - & - \\
 \hline
-llama_3.3_70b & 1 & 74.52 & 0.80 & 28.72 & 29.58 & 61.94 & 0.73 & 55.06 & 10.37 \\
-llama_3.3_70b & 10 & 18.24 & 0.47 & 7.68 & 1.83 & 3.60 & 0.13 & 9.84 & 0.81 \\
-llama_3.3_70b & all(-1) & 13.03 & 0.20 & 1.45 & 0.39 & 3.36 & 0.00 & 5.95 & 0.20 \\
+llama_3.3_70b & 1 & - & - & - & - & - & - & - & - \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 48.80 \\
-gpt-4.1-2025-04-14 & 10 & 8.65 \\
-gpt-4.1-2025-04-14 & all(-1) & 4.10 \\
-llama_3.3_70b & 1 & 32.71 \\
-llama_3.3_70b & 10 & 5.33 \\
-llama_3.3_70b & all(-1) & 3.07 \\
 \hline
