--- a/RAG_Style/reports/rouge-l-recall_table.tex
+++ b/RAG_Style/reports/rouge-l-recall_table.tex
@@ -1,23 +1,13 @@
-Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | Arithmetic | World.K | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 92.29 & 93.53 & 90.97 & 99.27 & 96.43 & 92.40 & 93.23 & 95.07 \\
-gpt-4.1-2025-04-14 & 10 & - & - & 18.88 & 34.50 & 14.43 & 11.40 & 16.66 & 22.95 \\
-gpt-4.1-2025-04-14 & all(-1) & - & - & 9.06 & 20.28 & 13.33 & 3.40 & 11.20 & 11.84 \\
+gpt-4.1-2025-04-14 & 1 & - & - & - & - & - & - & - & - \\
 \hline
-llama_3.3_70b & 1 & 78.59 & 68.73 & 88.34 & 88.90 & 66.19 & 96.67 & 77.71 & 84.77 \\
-llama_3.3_70b & 10 & 23.29 & 31.33 & 23.27 & 10.23 & 8.79 & 41.60 & 18.45 & 27.72 \\
-llama_3.3_70b & all(-1) & 18.69 & 16.00 & 4.30 & 4.47 & 17.91 & 2.20 & 13.63 & 7.56 \\
+llama_3.3_70b & 1 & - & - & - & - & - & - & - & - \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 94.15 \\
-gpt-4.1-2025-04-14 & 10 & 19.80 \\
-gpt-4.1-2025-04-14 & all(-1) & 11.52 \\
-llama_3.3_70b & 1 & 81.24 \\
-llama_3.3_70b & 10 & 23.08 \\
-llama_3.3_70b & all(-1) & 10.60 \\
 \hline
