--- a/RAG_Style/reports/tokens-prompt_table.tex
+++ b/RAG_Style/reports/tokens-prompt_table.tex
@@ -1,23 +1,13 @@
-Experiment | World.K | Arithmetic | Temporal | Uni Avg | Multi Avg \\
+Experiment | Arithmetic | World.K | Temporal | Uni Avg | Multi Avg \\
 K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & 10 & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
-gpt-4.1-2025-04-14 & all(-1) & - & - & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+gpt-4.1-2025-04-14 & 1 & - & - & - & - & - & - & - & - \\
 \hline
-llama_3.3_70b & 1 & 654.00 & 393.00 & 737.00 & 387.00 & 736.00 & 372.00 & 709.00 & 384.00 \\
-llama_3.3_70b & 10 & 4986.00 & 1992.00 & 5812.00 & 1806.00 & 5159.00 & 1721.00 & 5319.00 & 1839.67 \\
-llama_3.3_70b & all(-1) & 14617.00 & 5551.00 & 17100.00 & 4961.00 & 14984.00 & 4719.00 & 15567.00 & 5077.00 \\
+llama_3.3_70b & 1 & - & - & - & - & - & - & - & - \\
 \hline
 
 \bigskip
 \textbf{Average between Uni and Multi per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
-gpt-4.1-2025-04-14 & 1 & 0.00 \\
-gpt-4.1-2025-04-14 & 10 & 0.00 \\
-gpt-4.1-2025-04-14 & all(-1) & 0.00 \\
-llama_3.3_70b & 1 & 546.50 \\
-llama_3.3_70b & 10 & 3579.33 \\
-llama_3.3_70b & all(-1) & 10322.00 \\
 \hline
