--- a/RAG_Style/reports/sentences_table.tex
+++ b/RAG_Style/reports/sentences_table.tex
@@ -1,13 +1,15 @@
-Experiment | Arithmetic | World.K | Temporal | Uni Avg | Multi Avg \\
-K | Uni & Multi | Uni & Multi | Uni & Multi |  |  \\
+Experiment | arithmetic | wknow | temporal | Uni Avg | Multi Avg \\
+K | unispeaker & multispeaker | unispeaker & multispeaker | unispeaker & multispeaker |  |  \\
 \hline
-gpt-4.1-2025-04-14 & 1 & - & - & - & - & - & - & - & - \\
+gpt-4.1-2025-04-14 & 1 & - & 1.01 & - & - & - & - & - & 1.01 \\
 \hline
-llama_3.3_70b & 1 & - & - & - & - & - & - & - & - \\
+llama_3.3_70b & 1 & - & 2.90 & - & - & - & - & - & 2.90 \\
 \hline
 
 \bigskip
-\textbf{Average between Uni and Multi per $k$} \\
+\textbf{Average between unispeaker and multispeaker per $k$} \\
 \hline
 Experiment & K & Avg(Uni+Multi) \\
+gpt-4.1-2025-04-14 & 1 & 1.01 \\
+llama_3.3_70b & 1 & 2.90 \\
 \hline
