--- a/RAG_Style/reports/av_num_sentences_table.tex
+++ b/RAG_Style/reports/av_num_sentences_table.tex
@@ -1,15 +1,9 @@
 Experiment | arithmetic | wknow | temporal | Uni Avg | Multi Avg \\
 K | unispeaker & multispeaker | unispeaker & multispeaker | unispeaker & multispeaker |  |  \\
-\hline
 gpt-4.1-2025-04-14 & 1 & - & 1.01 & - & - & - & - & - & 1.01 \\
-\hline
-llama_3.3_70b & 1 & - & 2.90 & - & - & - & - & - & 2.90 \\
-\hline
+llama_3.2_3b & 1 & - & 1.59 & - & - & - & - & - & 1.59 \\
 
-\bigskip
-\textbf{Average between unispeaker and multispeaker per $k$} \\
-\hline
+Average between unispeaker and multispeaker per k
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 1.01 \\
-llama_3.3_70b & 1 & 2.90 \\
-\hline
+llama_3.2_3b & 1 & 1.59 \\
