--- a/RAG_Style/reports/rouge-2-recall_table.tex
+++ b/RAG_Style/reports/rouge-2-recall_table.tex
@@ -1,15 +1,9 @@
 Experiment | arithmetic | wknow | temporal | Uni Avg | Multi Avg \\
 K | unispeaker & multispeaker | unispeaker & multispeaker | unispeaker & multispeaker |  |  \\
-\hline
 gpt-4.1-2025-04-14 & 1 & - & 17.62 & - & - & - & - & - & 17.62 \\
-\hline
-llama_3.3_70b & 1 & - & 10.00 & - & - & - & - & - & 10.00 \\
-\hline
+llama_3.2_3b & 1 & - & 15.45 & - & - & - & - & - & 15.45 \\
 
-\bigskip
-\textbf{Average between unispeaker and multispeaker per $k$} \\
-\hline
+Average between unispeaker and multispeaker per k
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 17.62 \\
-llama_3.3_70b & 1 & 10.00 \\
-\hline
+llama_3.2_3b & 1 & 15.45 \\
