--- a/RAG_Style/reports/rouge-l-recall_table.tex
+++ b/RAG_Style/reports/rouge-l-recall_table.tex
@@ -1,15 +1,9 @@
 Experiment | arithmetic | wknow | temporal | Uni Avg | Multi Avg \\
 K | unispeaker & multispeaker | unispeaker & multispeaker | unispeaker & multispeaker |  |  \\
-\hline
 gpt-4.1-2025-04-14 & 1 & - & 69.13 & - & - & - & - & - & 69.13 \\
-\hline
-llama_3.3_70b & 1 & - & 66.67 & - & - & - & - & - & 66.67 \\
-\hline
+llama_3.2_3b & 1 & - & 47.58 & - & - & - & - & - & 47.58 \\
 
-\bigskip
-\textbf{Average between unispeaker and multispeaker per $k$} \\
-\hline
+Average between unispeaker and multispeaker per k
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 69.13 \\
-llama_3.3_70b & 1 & 66.67 \\
-\hline
+llama_3.2_3b & 1 & 47.58 \\
