--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "# Set CUDA devices to use all available GPUs\n",
+    "# Configure CUDA to utilize all available GPUs\n",
     "import torch\n",
     "import os\n",
     "\n",
@@ -78,7 +78,7 @@
     "import os\n",
     "from huggingface_hub import login\n",
     "\n",
-    "# Login using token from environment variable\n",
+    "# Authenticate with Hugging Face using token\n",
     "hf_token = 'You_token_here'\n",
     "if hf_token:\n",
     "    login(token=hf_token)\n",
@@ -103,13 +103,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @title Install dependencies (≈ 1 min)\n",
-    "# collapse-hide\n",
-    "# python should be python>=3.9\n",
+    "# Install dependencies (≈ 1 min)\n",
+    "# Python version should be >= 3.9\n",
     "import os\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "\n",
-    "DEVICE = \"cuda\"  #@param [\"cuda\", \"cpu\"]\n",
+    "DEVICE = \"cuda\"  # Options: [\"cuda\", \"cpu\"]\n",
     "!git clone https://github.com/ZeinabTaghavi/ImpliRet.git\n",
     "os.chdir(\"ImpliRet\")\n",
     "!python -m venv impliret_env && source impliret_env/bin/activate\n",
@@ -195,6 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run the retrieval script\n",
     "! bash retrieve.sh"
    ]
   },
@@ -225,7 +225,7 @@
     "    category=SPLIT,\n",
     "    discourse=STYLE,\n",
     "    retriever_name=RETRIEVER,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -258,6 +258,7 @@
     }
    ],
    "source": [
+    "# Evaluate retrieval results and get recall, MRR and NDCG metrics\n",
     "from Retrieval.reporting import evaluate_run\n",
     "\n",
     "recall_results, mrr_results, ndcg_results = evaluate_run()"
@@ -381,6 +382,7 @@
     }
    ],
    "source": [
+    "# Run the full baseline matrix via bash script\n",
     "! bash ./s_run_tests.sh"
    ]
   },
@@ -548,29 +550,22 @@
     "from RAG_Style.scripts.syncr.sync_run_tests import run_experiment\n",
     "CONFIG = \"RAG_Style/experiment_configs/bm/A_Multi_llama_bm_10.yaml\"\n",
     "\n",
-    "# Reasoning Category: Arithmetic:arithmetic, World Knowledge:wknowledge, Temporal:temporal\n",
-    "# Disource Type: Multi-speaker(forum style):multispeaker, Uni-speaker(chat style):unispeaker\n",
-    "category = \"arithmetic\"\n",
-    "discourse_type = \"multispeaker\"\n",
+    "# Configure experiment parameters\n",
+    "category = \"arithmetic\"              #@param [\"arithmetic\", \"wknowledge\", \"temporal\"] # Reasoning categories\n",
+    "discourse_type = \"multispeaker\"      #@param [\"multispeaker\", \"unispeaker\"] # Forum vs chat style discourse\n",
     "\n",
-    "# Model (vLLM server)\n",
-    "# The exact name of the model is in config file in the model_configs directory\n",
-    "model_name = \"llama_3.2_3b\"         # uses the vLLM‑API config\n",
+    "# Configure model settings\n",
+    "model_name = \"llama_3.2_3b\"         # Model name from vLLM-API config\n",
     "model_configs_dir = \"RAG_Style/model_configs\"\n",
     "\n",
-    "# Decoding / Eval\n",
+    "# Configure evaluation settings\n",
     "metric = \"EM , contains , rouge-recall\"\n",
-    "# Number of retrieved documents\n",
-    "k = 1\n",
-    "# Use user retrieval or not, if true, the user retrieval will be used to retrieve the documents\n",
-    "# if false, the oracle retrieval will be used to retrieve the documents\n",
-    "use_retrieval = False\n",
+    "k = 1                               # Number of documents to retrieve\n",
+    "use_retrieval = False               # Use user retrieval (True) or oracle retrieval (False)\n",
     "seed = 42\n",
-    "\n",
-    "# results\n",
     "output_folder = \"RAG_Style/results/\"\n",
     "\n",
-    "\n",
+    "# Run experiment with configured parameters\n",
     "result_path = run_experiment([\n",
     "    \"--model_name\",      model_name,\n",
     "    \"--model_configs_dir\", model_configs_dir,\n",
@@ -582,7 +577,7 @@
     "    \"--seed\",            str(seed),                    # \"42\"\n",
     "    \"--output_folder\",   output_folder\n",
     "])\n",
-    "# Or if you have a config file\n",
+    "# Alternative: Use config file\n",
     "# result_path = run_experiment([\"--config\", CONFIG])\n",
     "\n",
     "print(\"Saved generations →\", result_path)"
@@ -649,21 +644,20 @@
     "os.chdir(\"ImpliRet\")\n",
     "from RAG_Style.reporting import reporting\n",
     "\n",
+    "# Configure paths and parameters\n",
     "result_path = \"RAG_Style/results\"\n",
     "report_output_folder = \"RAG_Style/reports\"\n",
     "metrics = \"EM , rouge-recall\"\n",
     "reporting(result_path, metrics, report_output_folder, warn=False)\n",
     "\n",
-    "\n",
-    "# Print EM table\n",
+    "# Print evaluation tables\n",
     "print(\"\\nEM Table:\")\n",
     "with open(\"RAG_Style/reports/EM_table.tex\", \"r\") as f:\n",
     "    print(f.read())\n",
     "\n",
-    "# Print ROUGE-1 recall table \n",
     "print(\"\\nROUGE-1 Recall Table:\")\n",
     "with open(\"RAG_Style/reports/rouge-1-recall_table.tex\", \"r\") as f:\n",
-    "    print(f.read())\n"
+    "    print(f.read())"
    ]
   },
   {
