--- a/contribute.ipynb
+++ b/contribute.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "### Where to put your code\n",
     "\n",
-    "1. Save your file as `Retrieval/retrievals/MY_BM_retriever.py` (or another name).  \n",
+    "1. Save your file (for example content of previous cell) as `Retrieval/retrievals/MY_BM_retriever.py` (or another name).  \n",
     "2. Add an import branch to `Retrieval/retrieve_indexing.py` **lines 28–37**:\n",
     "\n",
     "```python\n",
